// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render as danger button 1`] = `
<body>
  <div>
    <button
      class="undefined py-1.5 shadow-sm font-semibold text-sm border px-4 rounded-md dark:shadow-md border-red-600 bg-red-500 text-white hover:bg-red-600 hover:border-red-700 dark:bg-red-700 dark:hover:bg-red-600 dark:hover:border-red-500"
      type="button"
    >
      button
    </button>
  </div>
</body>
`;

exports[`Button should render as secondary by default 1`] = `
<body>
  <div>
    <button
      class="undefined py-1.5 shadow-sm font-semibold text-sm border px-4 rounded-md dark:shadow-md border-neutral-300 bg-neutral-50 hover:bg-neutral-100 text-neutral-800 dark:bg-neutral-700 dark:text-neutral-300 dark:border-neutral-600 dark:hover:bg-neutral-600 dark:hover:border-neutral-500"
      type="button"
    >
      button
    </button>
  </div>
</body>
`;
